--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,28 +29,28 @@ classifiers = [
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 # REQUIREMENTS                                                                #
 dependencies = [
-    "omegaconf>=2.1.1",
-    "rich>=13.5.2",
-    "jsonargparse[signatures]>=4.27.7",
+    "omegaconf==2.1.1",
+    "rich==13.5.2",
+    "jsonargparse[signatures]==4.27.7",
     "docstring_parser",     # CLI help-formatter
     "rich_argparse",        # CLI help-formatter
 ]
 
 [project.optional-dependencies]
 core = [
-    "av>=10.0.0",
-    "einops>=0.3.2",
-    "freia>=0.2",
+    "av==10.0.0",
+    "einops==0.3.2",
+    "freia==0.2",
     "imgaug==0.4.0",
-    "kornia>=0.6.6",
-    "matplotlib>=3.4.3",
-    "opencv-python>=4.5.3.56",
-    "pandas>=1.1.0",
+    "kornia==0.6.6",
+    "matplotlib==3.4.3",
+    "opencv-python==4.5.3.56",
+    "pandas==1.1.0",
     "timm>=0.5.4,<=1.0.3",
-    "lightning>=2.2",
-    "torch>=2",
-    "torchmetrics>=1.3.2",
-    "open-clip-torch>=2.23.0",
+    "lightning==2.2",
+    "torch==2",
+    "torchmetrics==1.3.2",
+    "open-clip-torch==2.23.0",
 ]
 openvino = ["openvino>=2024.0", "nncf>=2.10.0", "onnx>=1.16.0"]
 loggers = [
