--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,16 +38,16 @@ dependencies = [
 
 [project.optional-dependencies]
 core = [
-    "av>=10.0.0",
-    "einops>=0.3.2",
-    "freia>=0.2",
+    "av==10.0.0",
+    "einops==0.3.2",
+    "freia==0.2",
     "imgaug==0.4.0",
-    "kornia>=0.6.6",
+    "kornia==0.6.6",
     "matplotlib>=3.4.3",
-    "opencv-python>=4.5.3.56",
+    "opencv-python==4.5.3.56",
     "pandas>=1.1.0",
     "timm>=0.5.4,<=1.0.3",
-    "lightning>=2.2",
+    "lightning==2.2",
     "torch>=2",
     "torchmetrics>=1.3.2",
     "open-clip-torch>=2.23.0",
